--- a/lenovo/src/components/styles/Main.css
+++ b/lenovo/src/components/styles/Main.css
@@ -1,5 +1,5 @@
 main {
-    height: 491vh;
+    height: 520vh;
 }
 
 #galaxy1 {
@@ -60,7 +60,7 @@ main {
 }
 
 #galaxy6 {
-    height: 60vh;
+    height: 40vh;
 }
 
 footer {
@@ -107,4 +107,14 @@ footer {
 .buttons {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
+}
+
+.iconsimage {
+    display: flex;
+    gap: 0.5rem;
+    row-gap: 1rem;
+    column-gap: 1rem;
+    align-items: center;
+    justify-content: flex-start;
+    font-size: 2rem;
 }
