--- a/lenovo/src/components/styles/Navbar.css
+++ b/lenovo/src/components/styles/Navbar.css
@@ -32,3 +32,45 @@ nav ul li a {
 nav ul li a:not(.active):hover {
     background-color: rgb(53, 4, 99);
 }
+
+
+/* Navbar.css */
+
+
+/* .navbar-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+} */
+
+
+/* .navbar-list {
+    display: flex;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    justify-content: space-between;
+} */
+
+
+/* .navbar-list>li {
+    margin: 0 10px;
+    white-space: nowrap;
+    /* Prevent line breaks within list items 
+} */
+
+.greeting {
+    position: relative;
+    left: 15rem;
+    white-space: nowrap;
+    margin-top: 0.5rem;
+    color: white;
+    /* Ensure the greeting does not break into multiple lines  */
+}
+
+
+/* 
+.font {
+    font-size: 5rem;
+} */
