--- a/lenovo/src/components/styles/career.css
+++ b/lenovo/src/components/styles/career.css
@@ -226,7 +226,8 @@
     text-align: center;
 }
 
-.Uploadcontainer {
+
+/* .Uploadcontainer {
     position: absolute;
     top: 8rem;
     transform: translate(-50%, -50%);
@@ -250,4 +251,4 @@
     padding: 0.5rem;
     border: 1px solid #ccc;
     border-radius: 4px;
-}
+} */
